<resources>
    <string name="app_name">Финансы класса</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="create_new_class">Создать новый класс</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Пароль должен быть длинее 5 символос</string>
    <string name="login_failed">"Login failed"</string>
    <string name="connect_to_class">Подключиться</string>
    <string name="class_id">Код класса</string>
    <string name="action_registration">Регистрация</string>
    <string name="join_class">Присоединится к классу</string>
    <string name="or">Или</string>
    <string name="forgot_password">Я забыл пароль</string>
    <string name="title_activity_childs_list">ChildsListActivity</string>
    <string name="childrens_list">Список детей</string>
    <string name="title_activity_child_detail">ChildDetailActivity</string>
    <string name="title_activity_donates_list">DonatesList</string>
    <string name="title_activity_donated_parents">DonatedParentsActivity</string>
</resources>
